# lspt-protocol

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: srpt-protocol-config.cmake.in
examples/: sender.cpp
examples/drone_swarm/: CMakeLists.txt  README.md
include/: lspt.h  lspt_satellite.h  srpt.h
install/include/srpt-protocol/: srpt_satellite.h
install/include/srpt-protocol/ai/data/: vectorized_data_handler.h
install/include/srpt-protocol/common/: types.h
install/include/srpt-protocol/congestion_control/: interface.h
install/include/srpt-protocol/core/: srpt_connection.h  srpt_error_detection.h  srpt_packet.h  srpt_retransmission.h
install/include/srpt-protocol/ground/: ground_handshake.h
install/include/srpt-protocol/network/local/: discovery.h  routing.h
install/include/srpt-protocol/network/node/: node.h
install/include/srpt-protocol/satellite/: iridium_provider.h  starlink_provider.h
install/include/srpt-protocol/space/drone/: drone_handshake.h
install/lib/cmake/srpt-protocol/: srpt-protocol-config.cmake  srpt-protocol-targets-noconfig.cmake  srpt-protocol-targets.cmake
src/: main.cpp
src/ai/: CMakeLists.txt
src/ai/data/: vectorized_data_handler.cpp
src/common/: CMakeLists.txt  types.h
src/congestion_control/: CMakeLists.txt  cubic.cpp  cubic.h  interface.h
src/core/: CMakeLists.txt  lspt_chunking.cpp  lspt_chunking.h  lspt_connection.cpp  lspt_connection.h  lspt_error_detection.cpp  lspt_error_detection.h  lspt_handshake.cpp  lspt_handshake.h  lspt_package.cpp  lspt_package.h  lspt_packet.cpp  lspt_packet.h  lspt_reassembly.cpp  lspt_reassembly.h  lspt_retransmission.cpp  lspt_retransmission.h  srpt_chunking.cpp  srpt_chunking.h  srpt_connection.cpp  srpt_error_detection.cpp  srpt_handshake.cpp  srpt_handshake.h  srpt_package.cpp  srpt_package.h  srpt_packet.cpp  srpt_reassembly.cpp  srpt_reassembly.h  srpt_retransmission.cpp
src/crypto/: CMakeLists.txt  lspt_crypto.cpp  lspt_crypto.h  srpt_crypto.cpp  srpt_crypto.h
src/ground/: CMakeLists.txt  ground_handshake.cpp  ground_handshake.h
src/network/: CMakeLists.txt
src/network/hub/: hub.cpp  hub.h
src/network/local/: discovery.cpp  discovery.h  routing.cpp  routing.h
src/network/node/: node.cpp  node.h
src/satellite/: CMakeLists.txt  iridium_provider.cpp  iridium_provider.h  lspt_satellite.cpp  srpt_satellite.cpp  starlink_provider.cpp  starlink_provider.h
src/space/: CMakeLists.txt
src/space/drone/: drone_handshake.cpp  drone_handshake.h
src/space/satellite/: satellite_handshake.cpp  satellite_handshake.h
tests/: CMakeLists.txt
tests/ai/: CMakeLists.txt
tests/ai/data/: vectorized_data_test.cpp
tests/common/: CMakeLists.txt
tests/congestion_control/: CMakeLists.txt  test_cubic.cpp
tests/core/: CMakeLists.txt  test_lspt_chunking.cpp  test_lspt_connection.cpp  test_lspt_demo.cpp  test_lspt_error_detection.cpp  test_lspt_handshake.cpp  test_lspt_package.cpp  test_lspt_packet.cpp  test_lspt_reassembly.cpp  test_lspt_retransmission.cpp  test_srpt_chunking.cpp  test_srpt_connection.cpp  test_srpt_error_detection.cpp  test_srpt_handshake.cpp  test_srpt_package.cpp  test_srpt_packet.cpp  test_srpt_reassembly.cpp  test_srpt_retransmission.cpp
tests/core/mocks/: mock_handshake.h
tests/crypto/: CMakeLists.txt  test_lspt_crypto.cpp  test_srpt_crypto.cpp
tests/ground/: test_ground_handshake.cpp
tests/integration/: CMakeLists.txt  test_handshake_integration.cpp
tests/network/: CMakeLists.txt
tests/network/hub/: hub_test.cpp
tests/network/local/: discovery_test.cpp  routing_test.cpp
tests/network/node/: node_test.cpp
tests/satelite/: CMakeLists.txt
tests/satellite/: CMakeLists.txt  test_iridium_mock_api.cpp  test_satellite_api.cpp
tests/satellite/mocks/: iridium_mock_api.cpp  iridium_mock_api.h
tests/space/drone/: test_drone_handshake.cpp
